# ultimateMRZ-SDK

./: .gitignore  PerAppLicense.md  README.md
assets/models/: mrz.classifier.params.json.doubango  mrz.classifier.strong.model.flat  mrz.classifier.strong.pca.json  mrz.traineddata
assets/samples/: mrva.txt  mrvb.txt  td1.txt  td2.txt  td3.txt
binaries/: README.md
binaries/android/: README.md
binaries/android/jniLibs/: README.md
binaries/ios/: README.md
binaries/ios/ultimate_mrz-sdk.framework/: Info.plist
binaries/linux/x86_64/: benchmark  parser  recognizer  runtimeKey  validation
binaries/raspbian/: README.md
binaries/raspbian/armv7l/: benchmark  parser  recognizer  runtimeKey  validation
binaries/windows/: README.md
binaries/windows/x86_64/: benchmark.bat  parser.bat  recognizer.bat  runtimeKey_AndroidApp.bat  ultimateMRZ-SDK.lib  validation.bat
c++/: README.md  ultimateMRZ-SDK-API-PUBLIC.h
csharp/: ULTMRZ_SDK_IMAGE_TYPE.cs  UltMrzSdkEngine.cs  UltMrzSdkResult.cs  ultimateMrzSdk.cs  ultimateMrzSdkPINVOKE.cs
java/: java.i
perl/: ultimateMrzSdk.pm
preview/: README.md
preview/assets/: mrz.classifier.params.json.doubango  mrz.classifier.strong.model.flat  mrz.classifier.strong.pca.json  mrz.traineddata
preview/c++/: main.cxx  mrz_sample.sln  mrz_sample.vcxproj  mrz_sample.vcxproj.filters
preview/include/: ultimateMRZ-SDK-API-PUBLIC.h
preview/lib/: ultimateMRZ-SDK.lib
python/: README.md  setup.py  ultimateMRZ-SDK-API-PUBLIC-SWIG_python.cxx  ultimateMrzSdk.py
samples/: README.md
samples/android/: README.md  build.gradle  settings.gradle
samples/android/benchmark/: build.gradle
samples/android/sdk/: build.gradle
samples/c++/: CMakeLists.txt  README.md  mrz_parser.h  mrz_utils.h
samples/c++/parser/: CMakeLists.txt  README.md  main.cxx  parser.sln  parser.vcxproj  parser.vcxproj.filters
samples/c++/runtimeKey/: CMakeLists.txt  README.md  main.cxx  runtimeKey.sln  runtimeKey.vcxproj
samples/c++/validation/: CMakeLists.txt  README.md  main.cxx  validation.vcxproj
samples/ios/: .gitignore  README.md
(+81 files in other folders)
